--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid">
       <aside class="card">
         <div class="avatar">
-          <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='200' height='200'><rect rx='20' width='100%' height='100%' fill='%237c3aed'/><text x='50%' y='55%' font-size='48' text-anchor='middle' fill='white' font-family='Inter,Arial'>LG</text></svg>" alt="avatar">
+          <img src="static/avatar.png" alt="avatar" width="200" height="200">
           <div>
             <div class="name">Estefania Milagros Lobo</div>
             <div class="role">Analista de Sistemas - Desarrolladora Full-Stack</div>
