--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           </header>
 
           <div class="about">
-            Soy Milagros, Estudiante avanzada de la carrera de Analista de Sistemas en la Escuela 
-            Superior de Diseño Da Vinci (96,76 % completado). Cuento con sólida experiencia práctica
+            Soy Milagros, Soy Analista de Sistemas recibida en la Escuela 
+            Superior de Diseño Da Vinci. Cuento con sólida experiencia práctica
             en desarrollo full-stack utilizando Flask (Python) y Laravel (PHP), junto con conocimientos
             en SQL, Docker y Metodologías Ágiles (Scrum). He desarrollado más de 7 proyectos funcionales
             enfocados en diseño, desarrollo y despliegue de software. Busco integrarme a un equipo 
