--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </header>
 
           <div class="about">
-            Soy Milagros, Soy Analista de Sistemas recibida en la Escuela 
+            Soy Milagros, Analista de Sistemas recibida en la Escuela 
             Superior de Diseño Da Vinci. Cuento con sólida experiencia práctica
             en desarrollo full-stack utilizando Flask (Python) y Laravel (PHP), junto con conocimientos
             en SQL, Docker y Metodologías Ágiles (Scrum). He desarrollado más de 7 proyectos funcionales
